# op-reth

./: .gitmodules  Cargo.toml  README.md
.github/actions/setup-environment/: action.yml
.github/assets/: check_wasm.sh  kurtosis_op_network_params_local.yaml  kurtosis_op_network_params_local_no_op_geth.yaml  kurtosis_op_network_params_remote.yaml  kurtosis_op_network_params_remote_no_op_geth.yaml  kurtosis_op_network_params_remote_no_op_reth.yaml  kurtosis_op_network_params_remote_op_reth_sequencer.yaml
.github/scripts/: check-kurtosis-enclave-block-creation.sh  dump-kurtosis-logs.sh  kurtosis-check-enclave-block-creation.sh  kurtosis-dump-logs.sh  kurtosis-format-args-file-matrix.sh
.github/workflows/: bench.yml  compact.yml  hive.yml  integration.yml  kurtosis-op-local-no-op-geth.yml  kurtosis-op-local.yml  kurtosis-op-remote-no-op-geth.yml  kurtosis-op-remote.yml  kurtosis-op.yml  kurtosis.yml  lint.yml  prepare-op-image.yml  prepare-op-reth.yml  prepare-reth.yml  release.yml  stage.yml  sync.yml  unit.yml  windows.yml
crates/blockchain-tree/src/: chain.rs
crates/consensus/consensus/: Cargo.toml
crates/e2e-test-utils/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/src/: execute.rs  metrics.rs  noop.rs  test_utils.rs
crates/optimism/chainspec/: Cargo.toml
crates/optimism/consensus/: Cargo.toml
crates/optimism/consensus/src/: error.rs  lib.rs
crates/optimism/consensus/src/validation/: canyon.rs  isthmus.rs  mod.rs
crates/optimism/evm/: Cargo.toml
crates/optimism/node/: Cargo.toml
crates/transaction-pool/: Cargo.toml
(+58 files in other folders)
