[package]
name = "reth-optimism-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-consensus-common.workspace = true
reth-consensus.workspace = true
reth-primitives.workspace = true
reth-trie-common.workspace = true
reth-storage-api.workspace = true
reth-storage-errors.workspace = true
reth-primitives-traits.workspace = true

# op-reth
reth-optimism-forks.workspace = true
reth-optimism-chainspec.workspace = true
# TODO: remove this after feature cleanup
reth-optimism-primitives = { workspace = true, features = ["serde"] }

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-trie.workspace = true

# misc
derive_more = { workspace = true, features = ["display", "error"] }
tracing.workspace = true

[dev-dependencies]
reth-provider = { workspace = true, features = ["test-utils"] }
reth-trie.workspace = true
reth-trie-db.workspace = true
reth-db-common.workspace = true

[features]
optimism = [
    "reth-primitives/optimism",
    "reth-optimism-primitives/optimism",
    "reth-primitives-traits/op",
    "reth-provider/optimism",
]
